# accelerator

./: .gitignore
capsules/arsat-customer-care/: Makefile
capsules/arsat-customer-care/mocks/: maximo_users.json
capsules/assistants-infrastructure/: main.py  pyproject.toml  scrap.py  service.yml
capsules/assistants-infrastructure/docs/: extended_uses_cases.md  runtime-consumption.json
capsules/assistants-infrastructure/leaderboards/: coding_leaderboard.md  english_leaderboard.md  math_leaderboard.md  overall_leaderboard.md  spanish_leaderboard.md
capsules/content-generator-mcp/: Makefile  client.py  main.py  pyproject.toml
capsules/content-generator-mcp/src/alquimia_tech_content_generator_mcp/: client.py  main.py  prompts.py
capsules/content-generator-mcp/src/alquimia_tech_content_generator_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
capsules/dynamics-kyc/: service.yml
capsules/global-kyc/: main.py  pyproject.toml
capsules/vital-oceans/: main.py  pyproject.toml  test.py  utils.py
metrics/grafana/: alquimia-trustlens.json
